@@ -12,3 +12,5 @@
 21-Sep-2021 - V0.20 Add UpdateHoldingsProvider(), and discoveryMode option for local and remote repos in RespositoryProvider().
 27-Sep-2021 - V0.21 Adjust URI paths in RespositoryProvider() and patch to compute missing BIRD annotations in the public archive
 28-Sep-2021 - V0.22 Add a more specific test for validation report xml data in CurrentHoldingsProvider.hasValidationReportData()
+29-Sep-2021 - V0.23 Make discoveryMode a configuration option rather than a constructor argument in RepositoryProvider() expose
+                    inputIdCodeList as an argument for RepositoryProvider.getLocatorObjList()
